--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "astro dev",
         "build": "astro check && astro build",
         "preview": "astro preview",
-        "astro": "astro"
+        "astro": "astro",
+        "cf-build": "npm install && npm run build"
     },
     "dependencies": {
         "@astrojs/tailwind": "^5.1.0",
