--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "devDependencies": {
         "@astrojs/check": "^0.9.0",
+        "prettier": "^3.6.2",
         "typescript": "^5.6.0"
     }
 }
