--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "devDependencies": {
         "@astrojs/check": "^0.9.0",
         "prettier": "^3.6.2",
+        "terser": "^5.44.0",
         "typescript": "^5.6.0"
     }
 }
